Fix/login bug (#42) and  cgdm-dao and standardize product module naming
improve login, SSO, LDAP/AD, WebSocket and route auth flows
add cgdm-dao and standardize product module naming
improve initialization and driver download error details
enhance Docker packaging, plugin build and README quick start volumes
add v3.0.7/v3.1.0 release notes in CN/EN